refactoring; code clean